Add commands, error handling, logging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ borg-drone = "borg_drone.__main__:main"
 [project.optional-dependencies]
 dev = [
     "yapf",
+    "autoflake",
     "mypy",
 ]
 test = [
