--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ COLUMN_LIMIT = 100
 SPLIT_BEFORE_FIRST_ARGUMENT = true
 SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = true
 ALLOW_SPLIT_BEFORE_DICT_VALUE = false
+SPLIT_COMPLEX_COMPREHENSION = true
 
 [tool.yapfignore]
 ignore_patterns = [
