--- a/.builds/ci-tests.yml
+++ b/.builds/ci-tests.yml
@@ -3,6 +3,7 @@ image: debian/stable
 packages:
   - python3
   - python3-pip
+  - make
 
 environment:
   REPO_NAME: borg-drone
@@ -19,3 +20,4 @@ tasks:
       pip -V
       cd ${REPO_NAME}
       pip install --no-color --progress-bar off '.[test]'
+      make test
