Support rclone uploads

--- a/borg_drone/example.yml
+++ b/borg_drone/example.yml
@@ -28,6 +28,7 @@ repositories:
       path: /backups/example-b
       encryption: keyfile
       compact: true
+      upload_path: 'b2:backups/'
 
 
   # Remote repository definitions
