--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 requires-python = ">=3.6"
 dependencies = [
     "PyYAML ~= 6.0",
+    "typing-extensions == 4.7.0"
 ]
 authors = []
 classifiers = []
