--- a/borg_drone/example.yml
+++ b/borg_drone/example.yml
@@ -13,7 +13,7 @@ repositories:
   local:
 
     # Local backup location A
-    local-example:
+    local-example-a:
       path: /backups/example-a
       encryption: keyfile-blake2
       prune:
@@ -24,7 +24,7 @@ repositories:
       compact: false
 
     # Local backup location B
-    local-example-2:
+    local-example-b:
       path: /backups/example-b
       encryption: keyfile
       compact: true
@@ -57,7 +57,7 @@ archives:
 
     # Use multiple repositories as defined above
     repositories:
-      - local-example
+      - local-example-a
       - remote-example
 
     # Include the following directories
@@ -76,11 +76,9 @@ archives:
     # Enable the --one-file-system borg options
     one_file_system: true
 
-  this-machine-2:
+  # Backup /etc folder to /backup/example-a/local-conf
+  local-conf:
     repositories:
-      local-example:
-      remote-example:
-        encryption: encryption_override
-
+      - local-example-a
     paths:
-      - ~/Documents
+      - /etc
